--- a/prjNightMarket/prjNightMarket.csproj
+++ b/prjNightMarket/prjNightMarket.csproj
@@ -127,6 +127,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\LinqController.cs" />
+    <Compile Include="Controllers\LoginMemberController.cs" />
     <Compile Include="Controllers\MemberController.cs" />
     <Compile Include="Controllers\NightMarketController.cs" />
     <Compile Include="Global.asax.cs">
@@ -179,10 +180,10 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\NightMarket\Index.cshtml" />
     <Content Include="Views\Member\Create.cshtml" />
+    <Content Include="Views\LoginMember\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\LinqExpression\" />
     <Folder Include="Views\PagingSample\" />
   </ItemGroup>
   <ItemGroup>
